# LLM-Eval

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  eval.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: baseline.json
datasets/: default.jsonl
docs/: architecture.md  concepts.md  deepeval.md  getting-started.md  index.md  learning-roadmap.md  production-eval.md  qa-onboarding.md  ragas.md
evals/deepeval/: test_rag_deepeval.py
examples/: run_deepeval_one_case.py  run_ragas_one_case.py
src/llm_eval_lab/: __init__.py  cli.py  compat.py  config.py  deepeval_concepts.py  eval_dataset.py  local_metrics.py  ragas_concepts.py  regression.py  reporting.py  runner.py  toy_rag.py
tests/: test_config.py  test_dataset.py  test_local_metrics.py  test_regression.py  test_runner.py  test_toy_rag.py
